--- a/lecture1Calc/Lec_1.tex
+++ b/lecture1Calc/Lec_1.tex
@@ -3,7 +3,9 @@
 \usepackage[a4paper, total={6.5in, 10in}]{geometry}
 \usepackage{graphicx}
 \usepackage{amsmath}
-\usepackage{setspace} 
+\usepackage{setspace}
+\usepackage{lmodern}
+\fontfamily{lmdh}\selectfont
 
 \title{Lecture 1 Differentiation}
 \author{Benay Tomas}
