curriculo folder update

--- a/Curriculo/curriculo.tex
+++ b/Curriculo/curriculo.tex
@@ -1,10 +1,4 @@
-\documentclass[12pt]{extarticle}
-\usepackage{extsizes}
-\usepackage[utf8]{inputenc}
-\usepackage[full]{textcomp}
-\usepackage{CJKutf8}
-\usepackage[lf]{ebgaramond}
-% \usepackage[scaled,swashQ]{garamondx}
+\documentclass[12pt]{article}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 
@@ -14,10 +8,6 @@
 
 \usepackage{enumitem}
 \usepackage[a4paper,left=.9in, right=.9in, top=0.9in, bottom=0.5in]{geometry}
-\usepackage{url}
-\usepackage[dvipsnames]{xcolor}
-\usepackage{amsmath}
-\usepackage{eqparbox}
 
 % package settings
 \usepackage[
@@ -49,7 +39,7 @@
     \rmfamily
     \textbf{Benay Tomas da Luz de Carvalho}}
 \end{center}
-\vspace{20pt}
+\vspace{5pt}
 
 
 \setlength{\parskip}{1pt}
@@ -81,10 +71,9 @@
 \indent
 {\large
 
-Meu objetivo é ganhar experiência na área de TI.\\
-\indent Formação em Bacharelado de Engenharia de Software.\\
-\indent Cursando curso externo de Data Science\\
-\indent Disponível em qualquer horário.
+Meu objetivo é construir uma carreira no desenvolvimento de software.\\
+\indent Bacharelado de Engenharia de Software.\\
+\indent Disponível pela tarde e noite.
 
 }
 
@@ -95,42 +84,15 @@ Meu objetivo é ganhar experiência na área de TI.\\
 
 \textbf{Colégio Estadual São Paulo Apóstolo (CESPA)}
 
-\hspace{2em}Ensino Médio (2020-2022)
+\hspace{2em}Formação Ensino Médio (2022)
 
 \textbf{Universidade Norte do Paraná (UNOPAR)}
 
-\hspace{2em}Graduação EAD em Bacharelado de Engenharia de Software\\
-\indent
-\hspace{2em}Ingressão em Setembro de 2023
+\hspace{2em}Graduação Bacharelado em Engenharia de Software.
 
-\textbf{EdX Courses}
-
-\hspace{2em}Calculus I: From Functions to Differential Equations\\
-\indent
-\hspace{2em}Início Fevereiro 2024
-
-\textbf{Udemy}
-
-\hspace{2em}Formação Data Science\\
-\indent
-\hspace{2em}Início Fevereiro 2024
-
-
+\hspace{2em}Em andamento.
 }
 
-% job experience
-\cvsection{Experiência de Emprego}
-\indent
-
-{\large
-
-\textbf{Kabum Locação de Brinquedos}, Curitiba, Paraná
-
-\hspace{2em}Auxiliar de entrega de artigos de festa (2017-)
-
-}
-
-\newpage
 % experiência acadêmica
 \vspace*{.15cm}
 \cvsection{Competências}
@@ -138,51 +100,70 @@ Meu objetivo é ganhar experiência na área de TI.\\
 
 {\large
 
-\textbf{Linguagem C}\hfill Setembro 2023
-
-\hspace{2em}Conhecimento básico da Linguagem
-
-\textbf{Análise e Modelagem de Sistemas} \hfill Setembro 2023
-
-\hspace{2em}Conhecimento básico de diagramas para modelagem de Sistemas
-
 \textbf{LaTeX} \hfill Novembro 2023
 
 \hspace{2em}Capacidade de criar arquivos PDF através de LaTeX
 
-\textbf{Linguagem Python - IA Expert Academy}\hfill 2024
+\textbf{Linguagem Python}\hfill Fevereiro 2024
 
-\hspace{2em}Machine Learning e Data Science com Python 
+\indent
+\hspace{2em}Especializando em Machine Learning e Data Science
 
-\textbf{Cálculo I} \hfill 2024
+\textbf{Cálculo} \hfill Fevereiro 2024
 
-\hspace{2em}Cálculo Diferencial e Integral
+\hspace{2em}Conhecimento em Cálculo Diferencial e Integral
 
 }
 
-\cvsection{Idioma}
+\vfill
+\begin{center}
+    \Large 2024
+\end{center}
+
+\newpage
+\indent
+
+% interests
+\cvsection{Interesses}
 \indent
 
 {\large
 
-Português Brasileiro Nativo
+\textbf{Programação}
 
-Inglês Intermediário
+\hspace{2em}Python
+
+\hspace{2em}Rust
+
+\hspace{2em}C++
+
+\textbf{Visualização de dados}
+
+\hspace{2em}Pandas
+
+\hspace{2em}Plotly
+
+\hspace{2em}Power BI
+
+\textbf{Machine Learning}
+
+\hspace{2em}Scikit-learn
+
+\hspace{2em}Yellow Brick
+
+
 
 }
 
-
-% reference 
-\cvsection{Referência}
+\indent
+\cvsection{Idiomas}
 \indent
 
 {\large
 
-\textbf{Adriano Rodriguês}, Chefe da Kabum Locação de Brinquedos
+Português Brasileiro Nativo.
 
-\hspace{2em}(+55) 41 99866-5614 
-
-\hspace{2em}\url{instagram.com/kabumbrinquedos/?hl=pt}
+Inglês Intermediário.
 
 }
 
