--- a/Class_Notes/Calculus/lec1/Lec_1.tex
+++ b/Class_Notes/Calculus/lec1/Lec_1.tex
@@ -3,11 +3,11 @@
 \usepackage[a4paper, total={6.5in, 10in}]{geometry}
 \usepackage{graphicx}
 \usepackage{amsmath}
-\usepackage{setspace}
+\usepackage{setspace} 
 \usepackage{lmodern}
 \fontfamily{lmdh}\selectfont
 
-\title{Lecture 1 Differentiation}
+\title{Lecture 1 Rate of Change}
 \author{Benay Tomas}
 
 \begin{document}
