--- a/Curriculo/curriculo.tex
+++ b/Curriculo/curriculo.tex
@@ -1,6 +1,8 @@
-\documentclass[12pt]{article}
-\usepackage[T1]{fontenc}
-\usepackage{lmodern}
+\documentclass{article}
+\usepackage[utf8]{inputenc}
+\usepackage{tgschola}
+\usepackage{fancyhdr}
+
 
 % chktex-file 8
 % chktex-file 36
@@ -32,6 +34,8 @@
 
 % begin
 \begin{document}
+
+\fontfamily{qcs}\selectfont
 
 % name
 \begin{center}
@@ -72,7 +76,6 @@
 {\large
 
 Meu objetivo é construir uma carreira no desenvolvimento de software.\\
-\indent Bacharelado de Engenharia de Software.\\
 \indent Disponível pela tarde e noite.
 
 }
@@ -104,14 +107,38 @@ Meu objetivo é construir uma carreira no desenvolvimento de software.\\
 
 \hspace{2em}Capacidade de criar arquivos PDF através de LaTeX
 
-\textbf{Linguagem Python}\hfill Fevereiro 2024
+\textbf{Linguagem Python e C++}\hfill Fevereiro 2024
 
 \indent
-\hspace{2em}Especializando em Machine Learning e Data Science
+\hspace{2em}Aprendendo sobre Data Science e aplicações Back-End
 
 \textbf{Cálculo} \hfill Fevereiro 2024
 
 \hspace{2em}Conhecimento em Cálculo Diferencial e Integral
+
+}
+
+\vspace*{.15cm}
+\cvsection{Qualidades}
+\noindent
+
+{\large
+
+\textbf{Foco}
+
+\hspace{2em}A maior parte dos meus estudos foram de maneira auto-didata,
+isso me ajudou a desenvolver minha capacidade de focar nos meus objetivos
+por inteiro.
+
+\textbf{Curiosidade}
+
+\hspace{2em}Provavelmente o que mais me movimenta quando o assunto é
+motivação.
+
+\textbf{Independência e Paciência}
+
+\hspace{2em}Se você me pedir para me familiarizar e me capacitar com um novo sistema adotado pela empresa,
+me dê uma semana e já estarei pronto para ensinar sobre o dito sistema para outras pessoas.
 
 }
 
@@ -133,8 +160,6 @@ Meu objetivo é construir uma carreira no desenvolvimento de software.\\
 
 \hspace{2em}Python
 
-\hspace{2em}Rust
-
 \hspace{2em}C++
 
 \textbf{Visualização de dados}
@@ -143,13 +168,23 @@ Meu objetivo é construir uma carreira no desenvolvimento de software.\\
 
 \hspace{2em}Plotly
 
-\hspace{2em}Power BI
-
 \textbf{Machine Learning}
 
 \hspace{2em}Scikit-learn
 
 \hspace{2em}Yellow Brick
+
+\textbf{Diversos}
+
+\hspace{2em}Pyautogui
+
+\hspace{2em}SpeechRecognition
+
+\hspace{2em}SFML
+
+\hspace{2em}GTK+
+
+\hspace{2em}Boost
 
 
 
@@ -169,6 +204,11 @@ Inglês Intermediário.
 
 \vfill
 \begin{center}
-    \Large 2024
+    {\Large 
+    Curitiba
+
+    2024
+    }
 \end{center}
+
 \end{document}
