--- a/Curriculo/curriculo.tex
+++ b/Curriculo/curriculo.tex
@@ -76,6 +76,7 @@
 {\large
 
 Meu objetivo é construir uma carreira no desenvolvimento de software.\\
+\indent Me especializar em Análise de Dados e Machine Learning.\\
 \indent Disponível pela tarde e noite.
 
 }
@@ -87,13 +88,13 @@ Meu objetivo é construir uma carreira no desenvolvimento de software.\\
 
 \textbf{Colégio Estadual São Paulo Apóstolo (CESPA)}
 
-\hspace{2em}Formação Ensino Médio (2022)
+\hspace{2em}Formação Ensino Médio (2022).
 
 \textbf{Universidade Norte do Paraná (UNOPAR)}
 
 \hspace{2em}Graduação Bacharelado em Engenharia de Software.
 
-\hspace{2em}Em andamento.
+\hspace{2em}Em andamento (Previsão de formação para 2027).
 }
 
 % experiência acadêmica
@@ -103,44 +104,35 @@ Meu objetivo é construir uma carreira no desenvolvimento de software.\\
 
 {\large
 
-\textbf{LaTeX} \hfill Novembro 2023
+\textbf{LaTeX} \hfill 2023
 
 \hspace{2em}Capacidade de criar arquivos PDF através de LaTeX
 
-\textbf{Linguagem Python e C++}\hfill Fevereiro 2024
+\textbf{Python}\hfill 2024
 
 \indent
-\hspace{2em}Aprendendo sobre Data Science e aplicações Back-End
+\hspace{2em}Conhecimento Intermediário da Linguagem.
 
-\textbf{Cálculo} \hfill Fevereiro 2024
+\hspace{2em}Conhecimento Básico em aplicações de Base de Dados.
 
-\hspace{2em}Conhecimento em Cálculo Diferencial e Integral
+\textbf{Cálculo} \hfill 2024
 
-}
+\hspace{2em}Conhecimento em Cálculo I Diferencial e Integral
 
-\vspace*{.15cm}
-\cvsection{Qualidades}
-\noindent
+\textbf{Linux} \hfill 2023
 
-{\large
+\hspace{2em}Alta familiaridade com o sistema baseado em Unix, Linux
 
-\textbf{Foco}
+\hspace{2em}6 meses com Debian
 
-\hspace{2em}A maior parte dos meus estudos foram de maneira auto-didata,
-isso me ajudou a desenvolver minha capacidade de focar nos meus objetivos
-por inteiro.
+\hspace{2em}1 ano com OpenSUSE
 
-\textbf{Curiosidade}
+\textbf{Pacote Office} \hfill 2023
 
-\hspace{2em}Provavelmente o que mais me movimenta quando o assunto é
-motivação.
-
-\textbf{Independência e Paciência}
-
-\hspace{2em}Se você me pedir para me familiarizar e me capacitar com um novo sistema adotado pela empresa,
-me dê uma semana e já estarei pronto para ensinar sobre o dito sistema para outras pessoas.
+\hspace{2em}Conhecimento Intermediário.
 
 }
+
 
 \vfill
 \begin{center}
@@ -160,13 +152,21 @@ me dê uma semana e já estarei pronto para ensinar sobre o dito sistema para ou
 
 \hspace{2em}Python
 
+\hspace{2em}SQL
+
+\hspace{2em}R
+
 \hspace{2em}C++
 
 \textbf{Visualização de dados}
 
-\hspace{2em}Pandas
+\hspace{2em}Jupyter Notebooks
 
-\hspace{2em}Plotly
+\hspace{2em}Rstudio
+
+\hspace{2em}DBeaver
+
+\hspace{2em}Excel (LibreOffice Calc)
 
 \textbf{Machine Learning}
 
@@ -174,17 +174,13 @@ me dê uma semana e já estarei pronto para ensinar sobre o dito sistema para ou
 
 \hspace{2em}Yellow Brick
 
-\textbf{Diversos}
+\textbf{Outros}
 
-\hspace{2em}Pyautogui
+\hspace{2em}SFML Library
 
-\hspace{2em}SpeechRecognition
+\hspace{2em}Pandas
 
-\hspace{2em}SFML
-
-\hspace{2em}GTK+
-
-\hspace{2em}Boost
+\hspace{2em}MatplotLib
 
 
 
