--- a/Class_Notes/README
+++ b/Class_Notes/README
@@ -1,13 +1,1 @@
-for the .rnote files you must have the rnote software.
-
-in case you want it, run these commands:
-Linux: 
-sudo <your-package-manager> install flatpak
-flatpak install flathub 
-flatpak run com.github.flxzt.rnote
-
-
-Windows: 
-go to https://github.com/flxzt/rnote/releases/tag/v0.10.2
-download the .exe
-install it.
+I uploaded 2 for each
