--- a/Curriculo/curriculo.tex
+++ b/Curriculo/curriculo.tex
@@ -28,8 +28,8 @@
 \thispagestyle{empty}
 
 % define cv section
-\newcommand{\cvsection}[1]{\section*{\rmfamily#1}}
-\newcommand{\cvsubsection}[1]{\subsection*{\rmfamily\hspace{1.6em}#1}}
+\newcommand{\cvsection}[1]{\section*{\rmfamily\textit{#1}}}
+\newcommand{\cvsubsection}[1]{\subsection*{\rmfamily\hspace{1.6em}\textit{#1}}}
 \newcommand{\HL}[1]{\textbf{\color{red}#1}}
 
 % begin
@@ -57,11 +57,13 @@
 
 \noindent (+55) 41 98466-3872
 
+\noindent \href{https://github.com/benaytms}{github.com/benaytms}
+
 \noindent benaytomas@gmail.com
 
 \noindent Rua Campo Mourão, 180 - Curitiba, Paraná
 
-\noindent 31/08/2004, 19 anos
+\noindent 31/08/2004, 20 anos
 
 }
 
@@ -75,9 +77,9 @@
 \indent
 {\large
 
-Meu objetivo é construir uma carreira no desenvolvimento de software.\\
-\indent Me especializar em Análise de Dados e Machine Learning.\\
-\indent Disponível pela tarde e noite.
+Meu objetivo é construir uma carreira em Análise de Dados.\\
+\indent Me especializar em Data Science e Machine Learning.\\
+\indent Disponível em qualquer horário.
 
 }
 
@@ -86,15 +88,15 @@ Meu objetivo é construir uma carreira no desenvolvimento de software.\\
 \indent 
 {\large
 
-\textbf{Colégio Estadual São Paulo Apóstolo (CESPA)}
+\textbf{\textit{Colégio Estadual São Paulo Apóstolo (CESPA)}} \hfill Formação em 2022
 
-\hspace{2em}Formação Ensino Médio (2022).
+\textbf{\textit{Universidade Norte do Paraná (UNOPAR)}} \hfill Formação em 2026
 
-\textbf{Universidade Norte do Paraná (UNOPAR)}
+\hspace{2em}\textit{Engenharia de Software}
 
-\hspace{2em}Graduação Bacharelado em Engenharia de Software.
+\textbf{\textit{Análise de dados com Python (FreeCodeCamp)}} \hfill Completo em 2024
 
-\hspace{2em}Em andamento (Previsão de formação para 2027).
+\hspace{2em}\textit{Manipulação de dados, visualização e análise usando Pandas e Matplotlib}
 }
 
 % experiência acadêmica
@@ -104,32 +106,44 @@ Meu objetivo é construir uma carreira no desenvolvimento de software.\\
 
 {\large
 
-\textbf{LaTeX} \hfill 2023
+\textbf{\textit{Python}}
 
-\hspace{2em}Capacidade de criar arquivos PDF através de LaTeX
+\hspace{2em}Intermediário
 
-\textbf{Python}\hfill 2024
+\hspace{2em}\textit{A First Course on Data Structure with Python by Donald R. Sheehy}
 
-\indent
-\hspace{2em}Conhecimento Intermediário da Linguagem.
 
-\hspace{2em}Conhecimento Básico em aplicações de Base de Dados.
+\textbf{\textit{Cálculo Diferencial e Integral I}}
 
-\textbf{Cálculo} \hfill 2024
+\hspace{2em}\href{https://ocw.mit.edu/courses/18-01-single-variable-calculus-fall-2006/}{\textit{Single Variable Calculus (MIT OpenCourseWare)}}
 
-\hspace{2em}Conhecimento em Cálculo I Diferencial e Integral
 
-\textbf{Linux} \hfill 2023
+\textbf{\textit{LaTeX}}
 
-\hspace{2em}Alta familiaridade com o sistema baseado em Unix, Linux
+\hspace{2em}Avançado
 
-\hspace{2em}6 meses com Debian
+\hspace{2em}\textit{Capacidade de criar arquivos PDF usando LaTeX}
 
-\hspace{2em}1 ano com OpenSUSE
 
-\textbf{Pacote Office} \hfill 2023
+\textbf{\textit{Linux}}
 
-\hspace{2em}Conhecimento Intermediário.
+\hspace{2em}Familiaridade avançada com Sistemas \textit{Linux}
+
+\hspace{2em}\textit{Debian, OpenSUSE e Mint}
+
+
+\textbf{\textit{Pacote Office}}
+
+\hspace{2em}Intermediário
+
+\hspace{2em}\textit{Excel / Word / Calc / Writer}
+
+\textbf{\textit{SQL}}
+
+
+\hspace{2em}Básico
+
+\hspace{2em}\href{https://www.youtube.com/watch?v=byHcYRpMgI4&t=70s}{\textit{SQLite with Python(FreeCodeCamp)}}
 
 }
 
@@ -148,63 +162,44 @@ Meu objetivo é construir uma carreira no desenvolvimento de software.\\
 
 {\large
 
-\textbf{Programação}
+\textbf{\textit{Linguagens}}
 
-\hspace{2em}Python
-
-\hspace{2em}SQL
-
-\hspace{2em}R
-
-\hspace{2em}C++
-
-\textbf{Visualização de dados}
-
-\hspace{2em}Jupyter Notebooks
-
-\hspace{2em}Rstudio
-
-\hspace{2em}DBeaver
-
-\hspace{2em}Excel (LibreOffice Calc)
-
-\textbf{Machine Learning}
-
-\hspace{2em}Scikit-learn
-
-\hspace{2em}Yellow Brick
-
-\textbf{Outros}
-
-\hspace{2em}SFML Library
-
-\hspace{2em}Pandas
-
-\hspace{2em}MatplotLib
+\hspace{2em}Python / R / SQL / Perl / Shell
 
 
+\textbf{\textit{Análise de dados}}
+
+\hspace{2em}NumPy / Pandas / Matplotlib / .csv
+
+\textbf{\textit{Matemática}}
+
+\hspace{2em}Cálculo / Estatística / Algebra Linear
+
+\textbf{\textit{Machine learning}}
 
 }
-
-\indent
 \cvsection{Idiomas}
 \indent
 
 {\large
 
-Português Brasileiro Nativo.
+\textbf{\textit{Nativo}}
 
-Inglês Intermediário.
+\hspace{2em}Português
+
+\textbf{\textit{Avançado}}
+
+\hspace{2em}Inglês
 
 }
 
 \vfill
-\begin{center}
-    {\Large 
-    Curitiba
+    \begin{center}
+        {\Large 
+        \textit{Curitiba}
 
-    2024
-    }
-\end{center}
+        2024
+        }
+    \end{center}
 
 \end{document}
